--- a/apps/finance/expenses-registration/src/app/app.component.html
+++ b/apps/finance/expenses-registration/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<div class="pageContainer">
+  <lib-navbar [navbarItems]="navbarItems" />
+  <router-outlet />
+</div>
